--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,3 +7,15 @@
 body {
     background-color: grey;
 }
+
+h1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+p {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
