--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,3 +19,7 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+
+/* button_readyAnimation
+
+/* Ankerlink button_readyAnimation to section strasse
