--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,34 @@
+/*globale einstellungen*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background-color: grey;
+:root {
+    --gelb: #FFBF00;
+    --hellgelb: #FFDD00;
+    --blau: #0071bc;
+    --gruen: #83D134;
+    --parkhaus: #435266;
+    --dunkelgrau: #353535;
+    --grau: grey;
+    
+  }
+
+  @font-face {
+    font-family: 'Univers';
+    src: url('fonts/Univers LT 55 Roman.ttf') format('ttf'),
+         url('fonts/Univers LT 93 Extra Black Extended Oblique.ttf') format('ttf'),
+         url('fonts/Univers LT 65 Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/*wiederkehrende elemente*/
+  body {
+    background-color: var(--grau);
 }
 
 h1 {
@@ -15,9 +38,159 @@ h1 {
 }
 
 p {
+    color: #FFF;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    font-family: "Univers LT 55";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.875rem; /* 150% */
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    }
+    
+#button{
+    background: linear-gradient(to right, 
+    var(--gelb) 0%, 
+    var(--hellgelb) 50%, 
+    var(--gelb) 100%); 
+width: 15rem;
+height: 4.5rem;
+flex-shrink: 0;
+
+border: none;
+border-radius: 0.5rem;
+
+display: flex;                /* ← wichtig für Zentrierung */
+align-items: center;          
+justify-content: center;      
+text-align: center;
+
+color: var(--dunkelgrau);
+text-align: center;
+font-family: "Univers LT 93 ExtraBlackEx";
+font-size: 1.5rem;
+font-style: italic;
+font-weight: 1000;
+letter-spacing: 0.1rem;
+}
+
+
+/*header*/
+.head {
+    background-image: url('../img/HG-Asphalt.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: 100vh;
+    text-align: center;
+    gap: 2rem;
+}
+
+
+
+
+                
+#asphalt{
+    z-index: -1;
+}
+#logo{
+    width: 75vw;
+}
+
+#button-ready {
+    background: linear-gradient(to right, 
+        var(--gelb) 0%, 
+        var(--hellgelb) 50%, 
+        var(--gelb) 100%); 
+    width: 15rem;
+    height: 4.5rem;
+    flex-shrink: 0;
+    margin-top: 2rem;
+
+    border: none;
+    border-radius: 0.5rem;
+
+    display: flex;                /* ← wichtig für Zentrierung */
+    align-items: center;          /* vertikal zentrieren */
+    justify-content: center;      /* horizontal zentrieren */
+    text-align: center;
+
+    color: var(--dunkelgrau);
+    text-align: center;
+    font-family: "Univers LT 93 ExtraBlackEx";
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: 1000;
+    letter-spacing: 0.1rem;
+}
+
+
+/*parkhaeuser-wiederkehrend*/
+.parkhaus-flaeche {
+    width: 20rem;
+    height: 20rem;
+    flex-shrink: 0;
+    background: var(--parkhaus);
+    justify-content: center;
+    align-items: center; 
+    display: flex;
+    flex-direction: column;
+}
+
+h2 {
+    font-family: 'Univers', sans-serif;
+    background-color: var(--blau);  
+    color: white;             
+    text-align: center;
+    display: inline-block;
+    border-radius: 0.5rem;      
+    padding: 1rem;            
+    
+}
+
+.status {
+    background-color: var(--gruen);   
+    width: 2rem;             
+    height: 2rem;            
+    border-radius: 50%;
+    margin-top: 1rem;
+}
+
+#icon-parkhaus{
+        width: 7rem;
+        height: 7rem;
+        flex-shrink: 0;  
+        margin-bottom: 1rem;
+}
+
+/* parkhaus sections*/
+.section-parkhaus-links{
+        display: flex;
+        align-items: center;      
+        justify-content: flex-start; 
+        margin-left: 5rem;        
+        height: 70vh;           
+    
+}
+
+.section-parkhaus-rechts{
+    display: flex;
+    align-items: center;      
+    justify-content: flex-end; 
+    margin-right: 5rem;        
+    height: 70vh;           
+
 }
 
 /* button_readyAnimation
