--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,7 @@
     --grau: grey;
     
   }
+  
 
   @font-face {
     font-family: 'Univers';
@@ -51,6 +52,7 @@ p {
     display: flex;
     justify-content: center;
     margin: 2rem;
+    z-index: 999;
     }
     
 #button{
@@ -95,17 +97,15 @@ letter-spacing: 0.1rem;
     height: 100vh;
     text-align: center;
     gap: 2rem;
+    position:relative;   /* bleibt beim Scrollen oben kleben – alternativ: relative */
+    z-index:1000;      /* höher als .scene (999) = ganz vorn */
 }
-
-
-
-
                 
 #asphalt{
     z-index: -1;
 }
 #logo{
-    width: 75vw;
+    width: 50vw;
 }
 
 #button-ready {
@@ -121,9 +121,9 @@ letter-spacing: 0.1rem;
     border: none;
     border-radius: 0.5rem;
 
-    display: flex;                /* ← wichtig für Zentrierung */
-    align-items: center;          /* vertikal zentrieren */
-    justify-content: center;      /* horizontal zentrieren */
+    display: flex;                
+    align-items: center;         
+    justify-content: center;      
     text-align: center;
 
     color: var(--dunkelgrau);
@@ -135,6 +135,38 @@ letter-spacing: 0.1rem;
     letter-spacing: 0.1rem;
 }
 
+/* strasse */
+.section-strasse{
+    position:fixed;          /* fixiert am Viewport */
+    inset:0;                 /* top/right/bottom/left = 0  */
+    pointer-events:none;     /* Inhalte darunter bleiben klickbar */
+    z-index:3;             /* ganz nach vorn */
+  }
+  
+  /* 2) Straße zentriert im fixierten Layer ----------------- */
+  .strasse{
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%);
+    width:30rem;          
+    background:var(--dunkelgrau);
+  }
+  
+/* mittellinie */
+.strasse::before{
+    content:"";
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:50%;
+    transform:translateX(-50%); /* vertikal zentrieren */
+  
+    /* ───────── Linie ───────── */
+    width:0;                        /* nötig, damit nur die Border zählt */
+    border-left:10px dashed #fff;   /* Breite, Stil, Farbe */
+  }
 
 /*parkhaeuser-wiederkehrend*/
 .parkhaus-flaeche {
