--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,8 +81,6 @@ font-size: 1.5rem;
 font-style: italic;
 font-weight: 1000;
 letter-spacing: 0.1rem;
-
-
 }
 
 
@@ -198,15 +196,23 @@ letter-spacing: 0.1rem;
   display: flex;
   align-items: center;      
   justify-content: flex-start; 
-  margin-left: 1rem;        
-  height: 50vh;  
+  margin-left: 2rem;        
+  height: 20vh;  
   align-items: center;         
-
 }
-.highlight {
-  width: 6rem;
-  height: auto;
-  margin-top: 1rem;
+
+.section_highlights_rechts{
+  display: flex;
+  align-items: center;      
+  justify-content: flex-end; 
+  margin-right: 2rem;        
+  height: 20vh;  
+  align-items: center;         
+}
+
+#highlight {
+  width: auto;
+  height: 5rem;
 }
 
 
@@ -336,6 +342,10 @@ h2 {
   #logo{
     width: 50vw;
 }
+.section_highlights .section_highlights_rechts{
+  max-height: 30vh;
+}
+
 }
 
 @media (min-width:1024px){
