--- a/CSS/style.css
+++ b/CSS/style.css
@@ -176,21 +176,16 @@ letter-spacing: 0.1rem;
 
 /* highlights */
 .section_rhein {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 20vh;
-    background: none;
-    z-index: 1;
-    position: relative;
+  width: 100%;
+  height: 100vh; /* oder z. B. 400px */
+  background-image: url('img/rhein.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 999;  /* nonig fertig */
 }
 
-#rhein {
-  width: 100vw;       
-  height: auto;       
-  display: block;     
-  margin: 0 auto;
-}
+
 
 .section_highlights{
   display: flex;
@@ -285,25 +280,6 @@ align-items: center;
   cursor: pointer;
 }
 
-dialog {
-  border: none;
-  border-radius: 10px;
-  padding: 2rem;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  max-width: 300px;
-  text-align: center;
-}
-
-.close {
-  position: absolute;
-  top: 1rem;
-  right: 1.5rem;
-  font-size: 1.5rem;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
 h2 {
   font-family: 'Univers', sans-serif;
   background-color: var(--blau);  
@@ -332,7 +308,32 @@ h2 {
 }
 
 
+/* Dialog-Grundstil */
+dialog#parkhaus-dialog {
+  padding: 2rem;
+  border: none;
+  border-radius: 10px;
+  max-width: 400px;
+  width: 90%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
 
+/* Abdunklung des Hintergrunds automatisch */
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.6);
+}
+
+/* Schließen-Button */
+#dialog-close {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.7rem;
+  font-size: 1.2rem;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
 
 
 /*breakpoints */
