--- a/CSS/style.css
+++ b/CSS/style.css
@@ -244,7 +244,16 @@ letter-spacing: 0.1rem;
     border-left:10px dashed #fff;   /* Breite, Stil, Farbe */
   }
 
-
+/*auto*/
+.auto {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  width: 15%;
+  height: auto;
+}
 
 /*parkhaeuser*/
 .section_parkhaus_links{
@@ -316,7 +325,6 @@ dialog#parkhaus-dialog {
   max-width: 400px;
   width: 90%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  position: relative;
 }
 
 /* Abdunklung des Hintergrunds automatisch */
@@ -324,7 +332,7 @@ dialog::backdrop {
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* Schließen-Button */
+/* OK-Button */
 #dialog-close {
   position: absolute;
   top: 0.5rem;
