--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,7 +112,7 @@ letter-spacing: 0.1rem;
     width: 75vw;
 }
 
-#button-ready {
+/*#button-ready {
     background: linear-gradient(to right, 
         var(--gelb) 0%, 
         var(--hellgelb) 50%, 
@@ -138,40 +138,49 @@ letter-spacing: 0.1rem;
     font-weight: 1000;
     letter-spacing: 0.1rem;
 }
+*/
 
-.animation {
-  background: linear-gradient(to right, 
-  var(--gelb) 0%, 
-  var(--hellgelb) 50%, 
-  var(--gelb) 100%); 
+.inner_heading{
+  border: 0px solid #ddd; 
   height: 50px;
-  width: 100px;
+  width: 300px;
+  font-size: 45px;
+  text-transform: uppercase;
   overflow: hidden;
+  text-align: center;   
+  justify-content: center;
+
 }
 
-.animation > div > div {
-  padding: 0.25rem 0.75rem;
-  height:2.81rem;
-  margin-bottom: 2.81rem;
-  display:inline-block;
+.inner_heading span{
+  position: relative;
+  color: var(--hellgelb);
+  text-align: center;
+  font-family: "Univers LT 93 ExtraBlackEx";
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: 1000;
+  letter-spacing: 0.1rem;
+  animation: animation 6s
+  ease-in-out infinite
 }
 
-.animation div:first-child {
-  animation: text-animation 8s infinite;
+@keyframes animation {
+  /* Wort 1 – READY */
+  0%,   30%  { top: 0; }
+
+  /* kurzer Übergang zur nächsten Zeile */
+  33%,  63%  { top: -50px; }   /* Wort 2 – SET */
+
+  /* Übergang zu Wort 3 */
+  66%,  96%  { top: -100px; }  /* Wort 3 – GO! */
+
+  /* Sprung zurück zum Anfang, damit der Loop sauber startet */
+  100%       { top: 0; }
 }
 
-@keyframes text-animation {
-  0% {margin-top: 0;}
-  10% {margin-top: 0;}
-  20% {margin-top: -5.62rem;}
-  30% {margin-top: -5.62rem;}
-  40% {margin-top: -11.24rem;}
-  60% {margin-top: -11.24rem;}
-  70% {margin-top: -5.62rem;}
-  80% {margin-top: -5.62rem;}
-  90% {margin-top: 0;}
-  100% {margin-top: 0;}
-}
+
+
 
 
 /* highlights */
