--- a/CSS/style.css
+++ b/CSS/style.css
@@ -353,7 +353,6 @@ h2 {
 }
 
 /* ------------- pop-up fenster ------------- */
-/* General pop-up overlay */
 .popup {
   display: none;
   position: fixed;
@@ -367,7 +366,6 @@ h2 {
   z-index: 999;
 }
 
-/* Inner content box */
 .popup-content {
   background: #fff;
   padding: 2rem;
@@ -378,7 +376,7 @@ h2 {
   position: relative;
 }
 
-/* Close button */
+/* Close X button */
 .popup .close {
   position: absolute;
   top: 10px;
@@ -387,20 +385,39 @@ h2 {
   cursor: pointer;
 }
 
-/*Auslastung Regler*/
+/*-----Auslastung-------*/
 .auslastung-bar-container {
+  position: relative;
   width: 100%;
   height: 20px;
-  background-color: #eee;
+  background: linear-gradient(to right, green, orange, red);
   border-radius: 10px;
   margin: 0.5rem 0;
   overflow: hidden;
 }
 
 .auslastung-bar {
+  position: relative;
   height: 100%;
   transition: width 0.5s ease;
   border-radius: 10px;
+}
+
+.regulator {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  z-index: 2;
 }
 
 /* ------------- breakpoints ------------- */
