--- a/CSS/style.css
+++ b/CSS/style.css
@@ -191,7 +191,7 @@ border-radius: 0.5rem;
   position: relative;
   color: var(--dunkelgrau);
   text-align: center;
-  font-family: "Univers LT 93 ExtraBlackEx";
+  font-family: "Univers LT", sans-serif;
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 1000;
@@ -372,12 +372,19 @@ h2 {
   border-radius: 10px;
   text-align: center;
   max-width: 400px;
-  width: 80%;
+  width: 90%;
   position: relative;
+  box-sizing: border-box;
+}
+
+.popup-title{
+font-size: 1.5rem;
+margin-bottom: 1rem;
 }
 
 .popup-row p {
   text-align: left;
+  font-size: 1rem;
 }
 
 /* Close X button */
