--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,6 +114,7 @@ p {
 width: 15rem;
 height: 4.5rem;
 flex-shrink: 0;
+cursor: pointer;
 
 border: none;
 border-radius: 0.5rem;
@@ -130,9 +131,11 @@ font-size: 1.5rem;
 font-style: italic;
 font-weight: 1000;
 letter-spacing: 0.1rem;
-
 }
 
+.button_hg:hover{
+  background: var(--gelb);
+}
 
 /* ------------- header ------------- */
 .header {
@@ -371,7 +374,7 @@ h2 {
   z-index: 999;
 }
 
-.popup-content {
+.popup_content {
   background: #fff;
   padding: 2rem;
   border-radius: 10px;
@@ -382,12 +385,12 @@ h2 {
   box-sizing: border-box;
 }
 
-.popup-title{
+.popup_title{
 font-size: 1.5rem;
 margin-bottom: 1rem;
 }
 
-.popup-row p {
+.popup_text p {
   text-align: left;
   font-size: 1rem;
 }
@@ -402,7 +405,7 @@ margin-bottom: 1rem;
 }
 
 /*-----Auslastung Regler-------*/
-.auslastung-bar-container {
+.auslastung_bar_container {
   position: relative;
   width: 100%;
   height: 20px;
