--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,7 +149,7 @@ p {
 
 /* ------------- header ------------- */
 .header {
-    background-image: url('../img/HG-Asphalt.png');
+    background-image: url('../img/hg_asphalt.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
